# match_movie

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  user-data.sh
.github/workflows/: ci.yml
instance/: site.db
static/css/: style.css
static/js/: script.js
templates/: base.html  friends.html  index.html  load_movies.html  login.html  movies.html  register.html  shared_movies.html
tests/: conftest.py  test_app.py
