[tool.poetry]
name = "movie-recommender"
version = "0.1.0"
description = ""
authors = ["smaaguero <smaaguero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
pandas = "^2.3.0"
requests = "^2.32.4"
flask-sqlalchemy = "^3.1.1"
werkzeug = "^3.1.3"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"